# Bookmark-Engine

./: .gitignore  Cargo.toml
extension/: manifest.json
extension/popup/: crawl.js  settings.html  settings.js  setup.js
frontend/: .gitignore  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  main.js  search_suggest.js  settings.html  settings.js  setup.js
search-engine/: Cargo.toml
search-engine/src/: lib-ex.rs  lib.rs  webpage.rs
src/: bookmark.rs  bookmark_parser.rs  index.rs  lib.rs  main.rs
