[package]
name = "bookmark_engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
scraper = "0.13.0"
regex = "1.5.6"
lazy_static = "1.4.0"
chrono = { version="0.4.19", features=["wasmbind"]}
probly-search = "1.2.4"