[package]
name = "search-engine"
version = "0.1.0"
authors = ["kalinkochnev <kalin.kochnev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.74"
scraper = "0.13.0"
regex = "1.5.6"
lazy_static = "1.4.0"
chrono = { version="0.4.19", features=["wasmbind"]}
probly-search = "1.2.4"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
